--- a/src/index.css
+++ b/src/index.css
@@ -2,24 +2,38 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
+
 @font-face {
-  font-family: 'Lexend Deca';
-  src: url('/frontend/src/assets/Lexend_Deca/LexendDeca-VariableFont_wght.ttf');
+  font-family: 'Bitter';
+  src: url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 }
 
 @font-face {
   font-family: 'PT Serif';
-  src: url('/frontend/src/assets/PT_Serif/PTSerif-Regular.ttf');
+  src: url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+}
+
+@font-face {
+  font-family: 'PT Serif';
+  src: url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 }
 
 @layer base {
   body {
-    font-family: 'Roboto', sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
 }
 
-h2 {
-  font-family: 'Roboto', sans-serif;
+nav {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+}
+
+h1, h2 {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 html {
@@ -45,9 +59,14 @@ section {
   place-items: center;
 }
 
-.glass-container {
+.green-container {
+  background: #2d452b;
+  backdrop-filter: blur(10px);
+  text-align: left;
+}
+
+.white-container {
   background: #e6e8ece0;
   backdrop-filter: blur(10px);
-  border-radius: 30px;
   text-align: left;
 }
